--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 			<tr>
 				<td class="cod">300174</td>
 				<td class="manutencao">Automação do setor de peletização</td>
-				<td class="status">Negociação</td>
+				<td class="status">Projeto</td>
 				<td class="preco">R$ 400.000,00 </td>
 			</tr>
 			<tr>
 				<td class="cod">300171</td>
 				<td class="manutencao">Reforma do sistema de resfriamento e substituição de ciclones</td>
-				<td class="status">Negociação</td>
+				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 220.000,00 </td>
 			</tr>
 			<tr>
@@ -86,7 +86,7 @@
 			<tr>
 				<td class="cod">300173</td>
 				<td class="manutencao">Projeto de elétrica e automação - 1º Etapa (Linha 1)</td>
-				<td class="status">Negociação</td>
+				<td class="status">Projeto</td>
 				<td class="preco"> R$ 50.000,00 </td>
 			</tr>
 			<tr>
@@ -104,7 +104,7 @@
 			<tr>
 				<td class="cod">300178</td>
 				<td class="manutencao">Projeto de elétrica e automação - 1º Etapa (Linha 2)</td>
-				<td class="status">Negociação</td>
+				<td class="status">Projeto</td>
 				<td class="preco"> R$ 50.000,00 </td>
 			</tr>
 			<tr>
@@ -134,7 +134,7 @@
 			<tr>
 				<td class="cod">300166</td>
 				<td class="manutencao">Terraplanagem e instalação da balança rodoviária e apoio balança</td>
-				<td class="status">Projeto</td>
+				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 450.000,00 </td>
 			</tr>
 			<tr>
@@ -146,7 +146,7 @@
 			<tr>
 				<td class="cod">300170</td>
 				<td class="manutencao">Instalação de cancelas da portaria</td>
-				<td class="status">Negociação</td>
+				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 30.000,00 </td>
 			</tr>
 			<tr>
@@ -170,14 +170,14 @@
 			<tr>
 				<td class="cod">300182</td>
 				<td class="manutencao">Adequação de painel elétrico</td>
-				<td class="status">Orçamento</td>
+				<td class="status">Parado</td>
 				<td class="preco"> R$ 150.000,00 </td>
 			</tr>
 			<tr>
 				<td class="cod">300183</td>
 				<td class="manutencao">Substituição do ciclone do Secador I e rotor do Exaustor</td>
-				<td class="status">Orçamento</td>
-				<td class="preco"> R$ 50.000,00 </td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 120.000,00 </td>
 			</tr>
 			<tr>
 				<td class="cod">300180</td>
