--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 			padding-left: 55px;
 			text-align: start !important;
 		}
+		.gasto {
+			width: 15%;
+			padding-left: 55px;
+			text-align: start !important;
+		}
 	</style>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 </head>
@@ -64,6 +69,7 @@
 				<td class="manutencao">Automação do setor de peletização</td>
 				<td class="status">Projeto</td>
 				<td class="preco">R$ 400.000,00 </td>
+				<td class="gasto">R$ 40.000,00 </td>
 			</tr>
 			<tr>
 				<td class="cod">300171</td>
