--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 			padding-left: 55px;
 			text-align: start !important;
 		}
+		.previsao {
+			width: 15%;
+			padding-left: 55px;
+			text-align: start !important;
+		}
 	</style>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 </head>
@@ -61,6 +66,8 @@
 				<th>Manutenção</th>
 				<th>Status</th>
 				<th>Preço</th>
+				<th>Gasto</th>
+				<th>Previsão</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -69,127 +76,168 @@
 				<td class="manutencao">Automação do setor de peletização</td>
 				<td class="status">Projeto</td>
 				<td class="preco">R$ 400.000,00 </td>
-				<td class="gasto">R$ 40.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300171</td>
 				<td class="manutencao">Reforma do sistema de resfriamento e substituição de ciclones</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 220.000,00 </td>
+				<td class="gasto">R$ 176.844,64 </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300172</td>
 				<td class="manutencao">Substituição de conjuntos de tração dos transportadores (Linha 1)</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 175.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300175</td>
 				<td class="manutencao">Reforma dos helicóides do misturador (MT1101)</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 30.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300173</td>
 				<td class="manutencao">Projeto de elétrica e automação - 1º Etapa (Linha 1)</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 50.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300176</td>
 				<td class="manutencao">Troca do sistema de alimentação das peletizadoras</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 150.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300177</td>
 				<td class="manutencao">Substituição de conjuntos de tração dos transportadores (Linha 2)</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 175.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300178</td>
 				<td class="manutencao">Projeto de elétrica e automação - 1º Etapa (Linha 2)</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 50.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300179</td>
 				<td class="manutencao">Substituição de sistema de envase de BigBag</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 150.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300164</td>
 				<td class="manutencao">Projeto e substituição de banco de capacitores</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 85.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300165</td>
 				<td class="manutencao">Substituição da tubulação pneumática</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 100.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300168</td>
 				<td class="manutencao">AVCB e SPDA</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 300.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300166</td>
 				<td class="manutencao">Terraplanagem e instalação da balança rodoviária e apoio balança</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 450.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300167</td>
 				<td class="manutencao">Ampliação dos box de matéria prima</td>
 				<td class="status">Parado</td>
 				<td class="preco"> R$ 120.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300170</td>
 				<td class="manutencao">Instalação de cancelas da portaria</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 30.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">-</td>
 				<td class="manutencao">Instalação de sistema de monitoramento por câmeras</td>
 				<td class="status">Cancelado</td>
-				<td class="preco"> R$ -
+				<td class="preco"> R$ - </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300163</td>
 				<td class="manutencao">Construção e melhoria de refeitório</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 150.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300181</td>
 				<td class="manutencao">Ampliação do barracão do peneiramento</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 150.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300182</td>
 				<td class="manutencao">Adequação de painel elétrico</td>
 				<td class="status">Parado</td>
 				<td class="preco"> R$ 150.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300183</td>
 				<td class="manutencao">Substituição do ciclone do Secador I e rotor do Exaustor</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 120.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 			<tr>
 				<td class="cod">300180</td>
 				<td class="manutencao">Reforma e melhoria no sistema de dosagem</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 120.000,00</td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> - </td>
 			</tr>
 		</tbody>
 	</table>
