--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 220.000,00 </td>
 				<td class="gasto">R$ 176.844,64 </td>
-				<td class="previsão"> - </td>
+				<td class="previsão"> 08/07/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300172</td>
@@ -148,8 +148,8 @@
 				<td class="manutencao">Projeto e substituição de banco de capacitores</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 85.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 70.000,00 </td>
+				<td class="previsão"> 12/06/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300165</td>
@@ -186,7 +186,7 @@
 			<tr>
 				<td class="cod">300170</td>
 				<td class="manutencao">Instalação de cancelas da portaria</td>
-				<td class="status">Desenvolvimento</td>
+				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 30.000,00 </td>
 				<td class="gasto">R$ - </td>
 				<td class="previsão"> - </td>
@@ -212,8 +212,8 @@
 				<td class="manutencao">Ampliação do barracão do peneiramento</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 150.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 112.055,82 </td>
+				<td class="previsão"> 20/09/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300182</td>
@@ -228,8 +228,8 @@
 				<td class="manutencao">Substituição do ciclone do Secador I e rotor do Exaustor</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 120.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 66.370,29 </td>
+				<td class="previsão"> 08/07/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300180</td>
