--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 				<td class="manutencao">Instalação de cancelas da portaria</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 30.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 23.874,90 </td>
+				<td class="previsão"> 09/07/2022 </td>
 			</tr>
 			<tr>
 				<td class="cod">-</td>
