--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 				<td class="manutencao">Automação do setor de peletização</td>
 				<td class="status">Projeto</td>
 				<td class="preco">R$ 400.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 79.037,41 </td>
+				<td class="previsão"> 14/08/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300171</td>
