--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<td class="manutencao">Reforma do sistema de resfriamento e substituição de ciclones</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 220.000,00 </td>
-				<td class="gasto">R$ 176.844,64 </td>
+				<td class="gasto">R$ 229.116,51 </td>
 				<td class="previsão"> 08/07/22 </td>
 			</tr>
 			<tr>
@@ -92,16 +92,16 @@
 				<td class="manutencao">Substituição de conjuntos de tração dos transportadores (Linha 1)</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 175.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 43.722,30 </td>
+				<td class="previsão"> 15/11/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300175</td>
 				<td class="manutencao">Reforma dos helicóides do misturador (MT1101)</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 30.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 13.058,20 </td>
+				<td class="previsão"> 25/08/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300173</td>
@@ -156,15 +156,15 @@
 				<td class="manutencao">Substituição da tubulação pneumática</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 100.000,00 </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="gasto">R$ 16.200,00 </td>
+				<td class="previsão"> 06/09/22 </td>
 			</tr>
 			<tr>
 				<td class="cod">300168</td>
 				<td class="manutencao">AVCB e SPDA</td>
 				<td class="status">Projeto</td>
 				<td class="preco"> R$ 300.000,00 </td>
-				<td class="gasto">R$ - </td>
+				<td class="gasto">R$ 177,56 </td>
 				<td class="previsão"> - </td>
 			</tr>
 			<tr>
@@ -188,7 +188,7 @@
 				<td class="manutencao">Instalação de cancelas da portaria</td>
 				<td class="status">Orçamento</td>
 				<td class="preco"> R$ 30.000,00 </td>
-				<td class="gasto">R$ 23.874,90 </td>
+				<td class="gasto">R$ 24.928,34 </td>
 				<td class="previsão"> 09/07/2022 </td>
 			</tr>
 			<tr>
@@ -212,7 +212,7 @@
 				<td class="manutencao">Ampliação do barracão do peneiramento</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 150.000,00 </td>
-				<td class="gasto">R$ 112.055,82 </td>
+				<td class="gasto">R$ 113.280,14 </td>
 				<td class="previsão"> 20/09/22 </td>
 			</tr>
 			<tr>
@@ -228,7 +228,7 @@
 				<td class="manutencao">Substituição do ciclone do Secador I e rotor do Exaustor</td>
 				<td class="status">Desenvolvimento</td>
 				<td class="preco"> R$ 120.000,00 </td>
-				<td class="gasto">R$ 66.370,29 </td>
+				<td class="gasto">R$ 90.100,94 </td>
 				<td class="previsão"> 08/07/22 </td>
 			</tr>
 			<tr>
