--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
 				<td class="previsão"> 09/07/2022 </td>
 			</tr>
 			<tr>
-				<td class="cod">-</td>
+				<td class="cod">300187</td>
 				<td class="manutencao">Instalação de sistema de monitoramento por câmeras</td>
-				<td class="status">Cancelado</td>
-				<td class="preco"> R$ - </td>
-				<td class="gasto">R$ - </td>
-				<td class="previsão"> - </td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 30.545,00 </td>
+				<td class="gasto">R$ 0 </td>
+				<td class="previsão"> 17/08/2022 </td>
 			</tr>
 			<tr>
 				<td class="cod">300163</td>
@@ -238,6 +238,14 @@
 				<td class="preco"> R$ 120.000,00</td>
 				<td class="gasto">R$ - </td>
 				<td class="previsão"> - </td>
+			</tr>
+			<tr>
+				<td class="cod">300187</td>
+				<td class="manutencao">Manutenção corretiva e preventiva nas máquinas peletizadoras</td>
+				<td class="status">Projeto</td>
+				<td class="preco"> R$ 145.000,00</td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão"> 12/08/2022 </td>
 			</tr>
 		</tbody>
 	</table>
