--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <body>
 	<table class="striped bordered centered green lighten-4">
-		<caption>ACOMPANHAMENTO CAPEX 2022</caption>
+		<caption>RELAÇÃO DE CENTROS DE CUSTOS - MANUTENÇÃO</caption>
 		<thead>
 			<tr>
 				<th>CC</th>
@@ -98,7 +98,7 @@
 			<tr>
 				<td class="cod">300175</td>
 				<td class="manutencao">Reforma dos helicóides do misturador (MT1101)</td>
-				<td class="status">Orçamento</td>
+				<td class="status">Finalizado</td>
 				<td class="preco"> R$ 30.000,00 </td>
 				<td class="gasto">R$ 13.058,20 </td>
 				<td class="previsão"> 25/08/22 </td>
@@ -114,7 +114,7 @@
 			<tr>
 				<td class="cod">300176</td>
 				<td class="manutencao">Troca do sistema de alimentação das peletizadoras</td>
-				<td class="status">Orçamento</td>
+				<td class="status">Finalizado</td>
 				<td class="preco"> R$ 150.000,00 </td>
 				<td class="gasto">R$ - </td>
 				<td class="previsão"> - </td>
@@ -146,7 +146,7 @@
 			<tr>
 				<td class="cod">300164</td>
 				<td class="manutencao">Projeto e substituição de banco de capacitores</td>
-				<td class="status">Desenvolvimento</td>
+				<td class="status">Finalizado</td>
 				<td class="preco"> R$ 85.000,00 </td>
 				<td class="gasto">R$ 70.000,00 </td>
 				<td class="previsão"> 12/06/22 </td>
@@ -154,7 +154,7 @@
 			<tr>
 				<td class="cod">300165</td>
 				<td class="manutencao">Substituição da tubulação pneumática</td>
-				<td class="status">Orçamento</td>
+				<td class="status">Finalizado</td>
 				<td class="preco"> R$ 100.000,00 </td>
 				<td class="gasto">R$ 16.200,00 </td>
 				<td class="previsão"> 06/09/22 </td>
@@ -247,6 +247,91 @@
 				<td class="gasto">R$ - </td>
 				<td class="previsão"> 12/08/2022 </td>
 			</tr>
+
+//
+
+			<tr>
+				<td class="cod">300199</td>
+				<td class="manutencao">Rotativo Industrial</td>
+				<td class="status">Finalizado</td>
+				<td class="preco"> R$ 415.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+			
+			<tr>
+				<td class="cod">300200</td>
+				<td class="manutencao">Terraplanagem</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 100.000,00  </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300201</td>
+				<td class="manutencao">Fabricação e Manutenção de equipamentos</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 1.271.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300202</td>
+				<td class="manutencao">Base Civil</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 80.000,00  </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+			
+			<tr>
+				<td class="cod">300203</td>
+				<td class="manutencao">Infraestrutura Elétrica e CCM</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 400.000,00  </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300204</td>
+				<td class="manutencao">Grupo gerador</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 403.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300205</td>
+				<td class="manutencao">Galpão pré-moldado</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco">  R$ 1.400.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300206</td>
+				<td class="manutencao">Estufa de composto</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco">   R$ 800.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+			<tr>
+				<td class="cod">300198</td>
+				<td class="manutencao">Rede de ar comprimido</td>
+				<td class="status">Desenvolvimento</td>
+				<td class="preco"> R$ 50.000,00 </td>
+				<td class="gasto">R$ - </td>
+				<td class="previsão">  - </td>
+			</tr>
+
+
 		</tbody>
 	</table>
 </body>
